[gd_scene load_steps=24 format=3 uid="uid://ch160tudw4u6q"]

[ext_resource type="Script" uid="uid://b31p3i5335fsn" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Theme" uid="uid://curqan7sssrvd" path="res://assets/themes/darksoul_theme.tres" id="1_ryguw"]
[ext_resource type="Script" uid="uid://dfumxramwujih" path="res://core/systems/input/input_watcher.gd" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://op6hhnff7x1j" path="res://core/systems/effects/slide_effect.gd" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://c0gysp8leikk8" path="res://core/systems/state/state_updater.gd" id="3_5vw27"]
[ext_resource type="Script" uid="uid://ctovlff2xeceh" path="res://core/systems/network/network_manager.gd" id="3_dg77c"]
[ext_resource type="Resource" uid="uid://721852jedisx" path="res://core/ui/menus/global_state_machine.tres" id="4_kek77"]
[ext_resource type="Script" uid="uid://cnguxa72sjiij" path="res://core/systems/effects/fade_effect.gd" id="4_lquwl"]
[ext_resource type="NetworkManagerInstance" uid="uid://d3mlilem0lsg7" path="res://core/systems/network/network_manager.tres" id="5_getpj"]
[ext_resource type="PackedScene" uid="uid://b24k0vq2xtgjs" path="res://core/ui/menus/welcome_menu.tscn" id="6_7mycd"]
[ext_resource type="ResourceRegistry" uid="uid://5wqd8qj3ltnu" path="res://core/systems/resource/resource_registry.tres" id="6_ryguw"]
[ext_resource type="Resource" uid="uid://dde6pgdtbjq6e" path="res://core/ui/menus/welcome_state.tres" id="7_kek77"]
[ext_resource type="Texture2D" uid="uid://cchs7qn6chacl" path="res://assets/images/ogui-logo.svg" id="8_kek77"]
[ext_resource type="PackedScene" uid="uid://vtl7tqxqrbne" path="res://core/ui/menus/network_menu.tscn" id="10_4c57u"]
[ext_resource type="Script" uid="uid://do1845tkjuib" path="res://core/systems/state/state_watcher.gd" id="10_getpj"]
[ext_resource type="Resource" uid="uid://dqlpk3k7h2mep" path="res://core/ui/menus/install_progress_state.tres" id="11_ryguw"]
[ext_resource type="PackedScene" uid="uid://cet5ts8n425hv" path="res://core/ui/menus/disk_select_menu.tscn" id="13_2cqfq"]
[ext_resource type="PackedScene" uid="uid://bgvwr3qopusg8" path="res://core/ui/components/dialog.tscn" id="13_ycdy4"]
[ext_resource type="PackedScene" uid="uid://bi6rpryk40x6k" path="res://core/ui/components/progress_dialog.tscn" id="14_w48qg"]
[ext_resource type="Resource" uid="uid://476u2vbh1yf1" path="res://core/systems/installer/nixos_installer.tres" id="14_yaehf"]
[ext_resource type="PackedScene" uid="uid://coo25pqrjpsee" path="res://core/ui/menus/install_progress_menu.tscn" id="15_074og"]
[ext_resource type="PackedScene" uid="uid://cfey6h88kg0ip" path="res://core/ui/components/password_dialog.tscn" id="15_vivmo"]
[ext_resource type="Script" uid="uid://cesorwv7214kh" path="res://addons/onscreenkeyboard/onscreen_keyboard.gd" id="23_d13ii"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ryguw")
script = ExtResource("1_ig7tw")
installer = ExtResource("14_yaehf")

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("3_dg77c")
instance = ExtResource("5_getpj")
metadata/_custom_type_script = "uid://ctovlff2xeceh"

[node name="ResourceProcessor" type="ResourceProcessor" parent="."]
registry = ExtResource("6_ryguw")

[node name="InputWatcher" type="Node" parent="."]
script = ExtResource("2_0xm2m")
action = "ui_cancel"
metadata/_custom_type_script = "uid://dfumxramwujih"

[node name="StateUpdater" type="Node" parent="InputWatcher"]
script = ExtResource("3_5vw27")
state_machine = ExtResource("4_kek77")
action = 1
on_signal = "input_released"
metadata/_custom_type_script = "uid://c0gysp8leikk8"

[node name="LogoSlideEffect" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("3_1bvp3")
target = NodePath("../MarginContainer/SetupContainer/LogoContainer/Control/Logo")
slide_speed = 1.0
margin = -200
on_signal = "ready"
slide_out_signal = ""
on_signal = "ready"
on_signal = "ready"
metadata/_custom_type_script = "uid://op6hhnff7x1j"

[node name="LogoFadeEffect" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_lquwl")
target = NodePath("../MarginContainer/SetupContainer/LogoContainer/Control/Logo")
fade_speed = 1.2
on_signal = "ready"
fade_out_signal = ""
on_signal = "ready"
on_signal = "ready"
metadata/_custom_type_script = "uid://cnguxa72sjiij"

[node name="ContentFadeEffect" type="Node" parent="LogoFadeEffect" node_paths=PackedStringArray("target")]
script = ExtResource("4_lquwl")
target = NodePath("../../MarginContainer/SetupContainer/ContentContainer")
fade_speed = 0.7
on_signal = "effect_finished"
fade_out_signal = ""
on_signal = "effect_finished"
on_signal = "effect_finished"
metadata/_custom_type_script = "uid://cnguxa72sjiij"

[node name="StateUpdater" type="Node" parent="LogoFadeEffect"]
script = ExtResource("3_5vw27")
state_machine = ExtResource("4_kek77")
state = ExtResource("7_kek77")
on_signal = "effect_finished"
metadata/_custom_type_script = "uid://c0gysp8leikk8"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 800.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="SetupContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StateWatcher" type="Node" parent="MarginContainer/SetupContainer"]
script = ExtResource("10_getpj")
state = ExtResource("11_ryguw")
metadata/_custom_type_script = "uid://do1845tkjuib"

[node name="FadeEffect" type="Node" parent="MarginContainer/SetupContainer/StateWatcher" node_paths=PackedStringArray("target")]
script = ExtResource("4_lquwl")
target = NodePath("../../LogoContainer/Control/Logo")
fade_speed = 0.7
on_signal = "state_exited"
fade_out_signal = "state_entered"
on_signal = "state_exited"
on_signal = "state_exited"
metadata/_custom_type_script = "uid://cnguxa72sjiij"

[node name="SlideEffect" type="Node" parent="MarginContainer/SetupContainer/StateWatcher" node_paths=PackedStringArray("target")]
script = ExtResource("3_1bvp3")
target = NodePath("../../LogoContainer/Control/Logo")
slide_speed = 0.4
margin = 0
direction = "left"
on_signal = "state_exited"
slide_out_signal = "state_entered"
on_signal = "state_exited"
on_signal = "state_exited"
metadata/_custom_type_script = "uid://op6hhnff7x1j"

[node name="LogoContainer" type="MarginContainer" parent="MarginContainer/SetupContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Control" type="Control" parent="MarginContainer/SetupContainer/LogoContainer"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="MarginContainer/SetupContainer/LogoContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_kek77")
expand_mode = 3
stretch_mode = 5

[node name="ContentContainer" type="MarginContainer" parent="MarginContainer/SetupContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WelcomeMenu" parent="MarginContainer/SetupContainer/ContentContainer" instance=ExtResource("6_7mycd")]
visible = false
layout_mode = 2

[node name="NetworkMenu" parent="MarginContainer/SetupContainer/ContentContainer" instance=ExtResource("10_4c57u")]
visible = false
layout_mode = 2

[node name="DiskSelectMenu" parent="MarginContainer/SetupContainer/ContentContainer" instance=ExtResource("13_2cqfq")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="InstallProgressMenu" parent="MarginContainer" instance=ExtResource("15_074og")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Dialog" parent="." instance=ExtResource("13_ycdy4")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="ProgressDialog" parent="." instance=ExtResource("14_w48qg")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="PasswordDialog" parent="." instance=ExtResource("15_vivmo")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="OnscreenKeyboard" type="PanelContainer" parent="." groups=["osk"]]
visible = false
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -112.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("23_d13ii")
metadata/_custom_type_script = "uid://cesorwv7214kh"
